Penggantian Nama Website

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Export Broomstick</title>
+    <title>Indonesia Sugar</title>
 
     <!-- Font -->
 
@@ -17,15 +17,13 @@
   <body>
     <!-- Navbar star -->
     <nav class="navbar">
-      <a href="#" class="navbar-logo">Nusantara<span>Spice</span></a>
+      <a href="#" class="navbar-logo">Nusantara<span>Sugar</span></a>
 
       <div class="navbar-nav">
         <a href="#home">Home</a>
         <a href="#about">About Us</a>
         <a href="#Galery">Galery</a>
         <a href="#Product">Products</a>
-        <a href="#News">News</a>
-        <a href="#OurTeam">Our Team</a>
         <a href="#ContactUs">Contact Us</a>
       </div>
 
@@ -144,7 +142,7 @@
 
     <!-- Footer START -->
     <footer>
-      <div class="socials">
+      <!-- <div class="socials">
         <a href="#">
           <i data-feather="instagram"></i>
         </a>
@@ -154,20 +152,18 @@
         <a href="#">
           <i data-feather="facebook"></i>
         </a>
-      </div>
+      </div> -->
 
       <div class="links">
         <a href="#home">Home</a>
         <a href="#about">About Us</a>
         <a href="#Galery">Galery</a>
         <a href="#Product">Products</a>
-        <a href="#News">News</a>
-        <a href="#OurTeam">Our Team</a>
         <a href="#ContactUs">Contact Us</a>
       </div>
 
       <div class="credit">
-        <p>Created by<a href="">Arief Wahyu|&copy; 2023.</p>
+        <p>Created by <a href="#home"> TeamSugar | &copy; 2023.</p>
       </div>
     </footer>
 
