--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
       <div class="navbar-nav">
         <a href="#home">Home</a>
         <a href="#about">About Us</a>
-        <a href="#Galery">Galery</a>
+        <a href="#galery">Galery</a>
         <a href="#Product">Products</a>
-        <a href="#ContactUs">Contact Us</a>
+        <a href="#contact">Contact Us</a>
       </div>
 
       <div class="navbar-extra">
@@ -34,6 +34,35 @@
       </div>
     </nav>
     <!-- Navbar end -->
+ 
+    <!-- Images Start -->
+
+    <div class="wrapper">
+      <div class="Slides">
+        <span id="Slide-1"></span>
+        <span id="Slide-2"></span>
+        <span id="Slide-3"></span>
+        <span id="Slide-4"></span>
+
+        <div class="images">
+          <img src="ArenSugar.jpg" alt="">
+          <img src="ArenSugar2.jpg" alt="">
+          <img src="ArenSugar3.jpg" alt="">
+          <img src="ArenSugar4.jpg" alt="">
+        </div>
+      </div>
+      
+
+      <!-- Slider Navigation -->
+      <div class="SlideNav">
+        <a href="#Slide-1">1</a>
+        <a href="#Slide-2">2</a>
+        <a href="#Slide-3">3</a>
+        <a href="#Slide-4">4</a>
+      </div>
+
+    </div>
+    <!-- Images End -->
 
     <!-- Hero Section Start -->
     <section class="hero" id="home">
@@ -74,7 +103,7 @@
 
     <!-- Galery Section Start -->
 
-    <section id="Galery" class="Galery">
+    <section id="galery" class="Galery">
       <h2>Galery<span> Kami</span></h2>
       <p>
         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestias et
@@ -104,8 +133,8 @@
     <!-- Galery Section End -->
 
     <!-- Contact Section Start -->
-    <section id="ContactUs" class="contact">
-      <h2><span>Kontak</span> Kami</h2>
+    <section class="contact">
+      <h2 id="contact"><span>Kontak</span> Kami</h2>
       <p>
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam aperiam
         sit reprehenderit. Quo eius culpa magni vel sit, minima nesciunt.
@@ -157,9 +186,9 @@
       <div class="links">
         <a href="#home">Home</a>
         <a href="#about">About Us</a>
-        <a href="#Galery">Galery</a>
+        <a href="#galery">Galery</a>
         <a href="#Product">Products</a>
-        <a href="#ContactUs">Contact Us</a>
+        <a href="#contact">Contact Us</a>
       </div>
 
       <div class="credit">
